--- a/style.css
+++ b/style.css
@@ -1,3 +1,107 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
     background-color: #e5e5e5;
+    font-family: 'Lato', sans-serif;
+}
+
+h1 {
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+li {
+    margin: 6px 0;
+}
+
+.contacts-list {
+    padding: 0;
+    list-style: none;
+}
+
+.contacts-list__item {
+    margin-bottom: 14px;
+    font-size: 12px;
+}
+
+.contacts-list__item:hover {
+    transform: scale(1.05);
+}
+
+.container {
+    margin: 0 auto;
+    width: 960px;
+    height: 100%;
+}
+
+.header {
+    height: 80px;
+    background: white;
+    border-bottom: 1px solid #cabbbb;
+}
+
+.header__container {
+    padding: 0 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.name {
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.main {
+    height: calc(100vh - 80px - 80px);
+}
+
+.container__main {
+    display: flex;
+}
+
+.sidebar {
+    padding: 24px;
+    width: 220px;
+    height: 100%;
+    background-color: white;
+    border-right: 1px solid #cabbbb;
+}
+
+.content {
+    padding: 24px;
+    width: calc(100% - 220px);
+    height: 100%;
+    background-color: white;
+    overflow: auto;
+}
+
+.footer {
+    height: 80px;
+    background-color: white;
+    border-top: 1px solid #cabbbb;
+}
+
+.footer__container {
+    padding: 0 14px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.logo {
+    height: 40px;
+}
+
+.link {
+    font-weight: 700;
 }
