--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ li {
     padding: 24px;
     width: 220px;
     height: 100%;
-    background-color: white;
+    background-color: #bdc3c7;
     border-right: 1px solid #dbdada;
 }
 
@@ -92,8 +92,13 @@ li {
 .footer {
     height: 60px;
     background-color: #34495e;
+    color: #ecf0f1;
     border-top: 1px solid #cabbbb;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Параметры тени */
+}
+
+.footer a {
+    color: #ecf0f1;
 }
 
 .footer__container {
@@ -109,5 +114,4 @@ li {
 
 .link {
     font-weight: 900;
-    color: #27ae60;
 }
