--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ li {
     height: 100%;
     background-color: white;
     overflow: auto;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Параметры тени */
 }
 
 .footer {
