--- a/style.css
+++ b/style.css
@@ -60,6 +60,21 @@ li {
     padding: 0 14px;
 }
 
+.photo {
+    width: 100%;
+    height: 220px;
+    object-position: center;
+    object-fit: cover;
+    margin-bottom: 14px;
+    overflow: hidden;
+    border-radius: 8px;
+}
+
+.photo img {
+    width: 100%;
+    height: 100%;
+}
+
 .name {
     font-size: 24px;
     font-weight: 900;
